--- a/applications.html
+++ b/applications.html
@@ -1078,7 +1078,7 @@
         <h2 class="footer-logo">
           <a href="index.html">
             <i class="fas fa-brain" aria-hidden="true"></i>
-            AIGC探索
+            AIGC指南
           </a>
         </h2>
         <p class="footer-description">探索人工智能生成内容的前沿进展、工具与应用，推动AI与人类创造力的融合，构建智能时代的知识桥梁。</p>
