--- a/index.html
+++ b/index.html
@@ -1804,8 +1804,8 @@
                         </div>
                         <div class="audio-container">
                             <audio controls>
-                                <source src="audio/AI%20INTRODUCE.mov" type="audio/mpeg">
-                                <source src="audio/AI%20INTRODUCE.mov" type="audio/ogg">
+                                <source src="audio/AI%20INTRODUCE.mp3" type="audio/mpeg">
+                                <source src="audio/AI%20INTRODUCE.mp3" type="audio/ogg">
                                 您的浏览器不支持音频播放，请尝试更新浏览器。
                             </audio>
                         </div>
@@ -1983,7 +1983,7 @@
                     <h2 class="footer-logo">
                         <a href="index.html">
                             <i class="fas fa-brain" aria-hidden="true"></i>
-                            AIGC探索
+                            AIGC指南
                         </a>
                     </h2>
                     <p class="footer-description">探索人工智能生成内容的前沿进展、工具与应用，推动AI与人类创造力的融合，构建智能时代的知识桥梁。</p>
